...
                    _isLoading
                        ? const CircularProgressIndicator()
                        : Column(
                          children: [
                            ElevatedButton(
                              onPressed: _signIn,
                              child: const Text('Войти'),
                              style: ElevatedButton.styleFrom(
                                minimumSize: const Size.fromHeight(50),
                                backgroundColor: Colors.indigoAccent,
                                textStyle: const TextStyle(fontSize: 16),
                              ),
                            ),
...
